--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,14 +1,16 @@
-<div class="hero">
-  <h1 class="hero__title">
-    <span>
-      A guide to user-friendly<br />
-      data in publications
-    </span>
-  </h1>
+<div class="hero-wrapper">
+  <div class="hero">
+    <h1 class="hero__title">
+      <span>
+        A guide to user-friendly<br />
+        data in publications
+      </span>
+    </h1>
 
-  <div class="hero__text">
-    The Data Documents Guide helps you produce and publish documents with data, charts, and text. Answer some simple
-    questions to receive selected recommendations or browse the recommendations catalogue.
+    <div class="hero__text">
+      The Data Documents Guide helps you produce and publish documents with data, charts, and text. Answer some simple
+      questions to receive selected recommendations or browse the recommendations catalogue.
+    </div>
   </div>
 </div>
 
