--- a/app/styles/hero.scss
+++ b/app/styles/hero.scss
@@ -1,3 +1,8 @@
+.hero-wrapper {
+  overflow: hidden;
+  background-color: $background;
+}
+
 .hero {
   width: 1000px;
   height: 650px;
@@ -10,7 +15,7 @@
     padding-top: 75px;
     font-size: 62px;
     font-weight: bold;
-    color: $grey;
+    color: $dark-blue;
     line-height: 75px;
   }
 
