--- a/app/styles/nav.scss
+++ b/app/styles/nav.scss
@@ -2,7 +2,7 @@
   position: relative;
   z-index: 1000;
   padding: 0 50px;
-  box-shadow: 0 2px 14px 0 rgba(205, 205, 205, 0.5);
+  background-color: $background;
 }
 
 .nav {
@@ -18,7 +18,6 @@
     display: inline-block;
     padding: 22px 0;
     margin-left: 50px;
-    border-bottom: 1.5px solid white;
 
     &:first-child {
       margin-left: 0;
@@ -32,7 +31,6 @@
     &.active,
     &:hover {
       color: $blue;
-      border-color: $blue;
     }
   }
 }
