updated nav and hero

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,15 +1,21 @@
 <div class="hero-wrapper">
   <div class="hero">
     <h1 class="hero__title">
-      <span>
-        A guide to user-friendly<br />
-        data in publications
-      </span>
+      A practical guide to<br />
+      user-friendly data in<br />
+      publications
     </h1>
 
     <div class="hero__text">
-      The Data Documents Guide helps you produce and publish documents with data, charts, and text. Answer some simple
-      questions to receive selected recommendations or browse the recommendations catalogue.
+      This guide helps you with all data-related aspects of your publication: writing about data, creating data
+      visualisations and publishing data. Providing you with tips and resources, it will make data of your publication
+      easier to be discovered, accessed and reused.
+    </div>
+
+    <div class="hero__link">
+      <a href="#structure" {{link-inline}}>
+        Explore the guide
+      </a>
     </div>
   </div>
 </div>
