--- a/app/styles/hero.scss
+++ b/app/styles/hero.scss
@@ -5,34 +5,29 @@
 
 .hero {
   width: 1000px;
-  height: 650px;
-  margin: 50px auto 150px;
+  margin: 50px auto 50px;
   background-image: url('../hero.svg');
   background-repeat: no-repeat;
   background-position: center;
 
   &__title {
-    padding-top: 75px;
-    font-size: 62px;
+    margin: 0 0 45px;
+    font-size: 58px;
     font-weight: bold;
-    color: $dark-blue;
+    color: $op-blue;
     line-height: 75px;
   }
 
   &__text {
     max-width: 650px;
-    font-size: 30px;
-    color: $grey;
-    line-height: 41px;
+    color: $black;
+    font-size: 26px;
+    line-height: 38px;
   }
 
-  &__button {
-    display: inline-block;
-    margin-top: 50px;
-    background: $blue;
-    border-radius: 6px;
-    box-shadow: 0 2px 10px 0 rgba(176, 176, 176, 0.5);
-    color: white;
-    padding: 15px 20px;
+  &__link {
+    margin-top: 35px;
+    color: $dark-grey;
+    font-size: 18px;
   }
 }
