--- a/app/styles/footer.scss
+++ b/app/styles/footer.scss
@@ -12,4 +12,19 @@
   column-gap: 50px;
   font-size: 14px;
   line-height: 25px;
+
+  p {
+    margin: 10px 0;
+
+    &:first-of-type {
+      margin-top: 0;
+    }
+    &:last-of-type {
+      margin-bottom: 0;
+    }
+  }
+
+  a {
+    color: $blue;
+  }
 }
