--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -17,23 +17,31 @@
 <div class="footer-wrapper">
   <div class="footer">
     <div>
-      A Prototype by the Publications Office of the European Union
+      <strong>A Prototype by the Publications Office of the European Union</strong>
     </div>
 
     <div>
-      Content<br />
-      Publications Office of the European Union<br /><br />
-      Development and maintenance<br />
-      Adina Renner<br /><br />
-      Queries and Feedback:<br />
-      OP-DATA-EUROPA-EU@publications.europa.eu
+      <p>
+        <strong>Content</strong><br />
+        Publications Office of the European Union
+      </p>
+
+      <p>
+        <strong>Development and maintenance</strong><br />
+        Adina Renner
+      </p>
+
+      <p>
+        <strong>Queries and Feedback:</strong><br />
+        OP-DATA-EUROPA-EU@publications.europa.eu
+      </p>
     </div>
 
     <div>
-      Copy link<br />
-      Email link<br />
-      Download guide as checklist<br />
-      Download guide with descriptions
+      <a href="#">Copy link</a><br />
+      <a href="#">Email link</a><br />
+      <a href="#">Download guide as checklist</a><br />
+      <a href="#">Download guide with descriptions</a>
     </div>
   </div>
 </div>
