styled about items

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -27,6 +27,7 @@ $shade: #f9f9f9;
 $light-grey: #c2c2c2;
 $black: #1a1a1a;
 
+@import 'about';
 @import 'footer';
 @import 'header';
 @import 'hero';
