--- a/app/styles/hero.scss
+++ b/app/styles/hero.scss
@@ -6,12 +6,12 @@
 .hero {
   width: 1000px;
   margin: 50px auto 50px;
-  background-image: url('../hero.svg');
+  /*background-image: url('../hero.svg');
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: center;*/
 
   &__title {
-    margin: 0 0 45px;
+    margin: 0;
     font-size: 58px;
     font-weight: bold;
     color: $op-blue;
@@ -19,10 +19,16 @@
   }
 
   &__text {
+    margin-top: 45px;
     max-width: 650px;
     color: $black;
     font-size: 26px;
     line-height: 38px;
+
+    &--small {
+      font-size: 21px;
+      line-height: 30px;
+    }
   }
 
   &__link {
