--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,16 +1,21 @@
-<div>
-  About the «Data in Publications» Guide
-</div>
+<div class="hero-wrapper">
+  <div class="hero">
+    <h1 class="hero__title">
+      About the «Data in<br/>
+      Publications» Guide
+    </h1>
 
-<div>
-  Data is a central component of any kind of government publication, be it a report, a study, or a policy summary.
-  Nonetheless, data is often not presented and published in a way that allows others to reuse and reference it.
-</div>
+    <div class="hero__text hero__text--small">
+      Data is a central component of any kind of government publication, be it a report, a study, or a policy summary.
+      Nonetheless, data is often not presented and published in a way that allows others to reuse and reference it.
+    </div>
 
-<div>
-  Formatted as an extendable checklist, this guide compiles tips, examples, and resources from across the EU. These
-  recommendations will help you produce and publish accessible and reusable data, data visualisations, and publications
-  that contain data.
+    <div class="hero__text hero__text--small">
+      Formatted as an extendable checklist, this guide compiles tips, examples, and resources from across the EU. These
+      recommendations will help you produce and publish accessible and reusable data, data visualisations, and
+      publications that contain data.
+    </div>
+  </div>
 </div>
 
 <div class="about">
