updated footer buttons

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -38,10 +38,8 @@
     </div>
 
     <div>
-      <a href="#">Copy link</a><br />
-      <a href="#">Email link</a><br />
-      <a href="#">Download guide as checklist</a><br />
-      <a href="#">Download guide with descriptions</a>
+      <button type="button" {{on "click" this.share}}>Email link</button><br />
+      <button type="button" {{on "click" this.print}}>Print page</button>
     </div>
   </div>
 </div>
