--- a/app/styles/footer.scss
+++ b/app/styles/footer.scss
@@ -24,7 +24,12 @@
     }
   }
 
-  a {
+  a,
+  button {
     color: $blue;
+    border: none;
+    background: none;
+    padding: 0;
+    cursor: pointer;
   }
 }
