--- a/app/styles/section.scss
+++ b/app/styles/section.scss
@@ -47,6 +47,10 @@
     box-shadow: 0 2px 8px 0 rgba(205, 205, 205, 0.5);
     border-radius: 8px;
 
+    &--open {
+      padding-bottom: 20px;
+    }
+
     &__title {
       font-size: 26px;
       font-weight: normal;
