correct topic order

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -21,5 +21,5 @@
 </div>
 
 <div class="page">
-  <Catalog @topics={{this.data.recommendationTopics}} @recommendations={{this.data.groupedRecommendations}} />
+  <Catalog @topics={{this.data.topicNames}} @recommendations={{this.data.groupedRecommendations}} />
 </div>
