--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -6,8 +6,9 @@
     </h1>
 
     <div class="hero__text hero__text--small">
-      Data is a central component of any kind of government publication, be it a report, a study, or a policy summary.
-      Nonetheless, data is often not presented and published in a way that allows others to reuse and reference it.
+      Nowadays, data has become a central component of any kind of government publication, be it a report, a study, or a
+      policy summary. Nonetheless, data is often not presented and published in a way that allows others to easily
+      access, reuse and reference it.
     </div>
 
     <div class="hero__text hero__text--small">
@@ -53,8 +54,8 @@
       </div>
 
       <div class="about__item__text">
-        The guide should be used at the very beginning of your publication process – after you have received the O.K.
-        for a publication, but before you have commissioned any work on it.
+        The guide should be used at the very beginning of your publishing process – after you have received the O.K. for
+        a publication, but before you have commissioned any work on it.
       </div>
 
       <div class="about__item__text">
@@ -70,10 +71,11 @@
       </div>
 
       <div class="about__item__text">
-        The EU Publication Wizard was created by the Publications Office of the European Union. What you see here is a
-        beta version of the Wizard. As we are continuing to develop the Wizard, we would love to hear your feedback.
-        Please send us an email at OP-DATA-EUROPA-EU@publications.europa.eu with ‘Publication Wizard feedback’ in the
-        subject line.
+        The Data in Publications Guide was created by the Publications Office of the European Union. What you see here
+        is a beta version of the guide. As we are continuing to develop it, we would love to hear your feedback. Please
+        send us an email at
+        <a href="mailto:OP-DATA-EUROPA-EU@publications.europa.eu">OP-DATA-EUROPA-EU@publications.europa.eu</a>
+        with ‘Data in Publications Guide feedback’ in the subject line.
       </div>
     </div>
   </div>
