--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -33,7 +33,7 @@
 
       <p>
         <strong>Queries and Feedback:</strong><br />
-        OP-DATA-EUROPA-EU@publications.europa.eu
+        <a href="OP-DATA-EUROPA-EU@publications.europa.eu">OP-DATA-EUROPA-EU@publications.europa.eu</a>
       </p>
     </div>
 
