--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -8,8 +8,8 @@
 
     <div class="hero__text">
       This guide helps you with all data-related aspects of your publication: writing about data, creating data
-      visualisations and publishing data. Providing you with tips and resources, it will make data of your publication
-      easier to be discovered, accessed and reused.
+      visualisations, and preparing and publishing data. The guide provides you with tips and resources that will make
+      the data of your publication more accessible and reusable.
     </div>
 
     <div class="hero__link">
