--- a/app/styles/about.scss
+++ b/app/styles/about.scss
@@ -1,9 +1,14 @@
 .about {
-  width: 1000px;
+  max-width: 1000px;
   margin: 100px auto 150px;
+  padding: 0 25px;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr;
   grid-column-gap: 40px;
+
+  @include desktop() {
+    grid-template-columns: 1fr 1fr;
+  }
 
   &__column {
     display: flex;
