more mobile fixes

--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,8 +1,7 @@
 <div class="hero-wrapper">
   <div class="hero">
     <h1 class="hero__title">
-      About the «Data in<br />
-      Publications» Guide
+      About the «Data in Publications» Guide
     </h1>
 
     <div class="hero__text hero__text--small">
