--- a/app/styles/hero.scss
+++ b/app/styles/hero.scss
@@ -6,13 +6,14 @@
 
 .hero {
   max-width: 1000px;
-  margin: 50px auto 50px;
+  margin: 25px auto 50px;
   /*background-image: url('../hero.svg');
   background-repeat: no-repeat;
   background-position: center;*/
 
   &__title {
     margin: 0;
+    max-width: 575px;
     font-size: 58px;
     font-weight: bold;
     color: $op-blue;
