--- a/app/styles/nav.scss
+++ b/app/styles/nav.scss
@@ -1,8 +1,12 @@
 .nav-wrapper {
   position: relative;
   z-index: 1000;
-  padding: 0 25px;
+  padding: 25px;
   background-color: $background;
+
+  @include desktop() {
+    padding: 40px 25px;
+  }
 }
 
 .nav {
@@ -16,7 +20,7 @@
 
   &__item {
     display: inline-block;
-    padding: 45px 0;
+    padding: 5px 0;
     margin-left: 50px;
 
     &:first-child {
