--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,9 +1,7 @@
 <div class="hero-wrapper">
   <div class="hero">
     <h1 class="hero__title">
-      A practical guide to<br />
-      user-friendly data in<br />
-      publications
+      A practical guide to user-friendly data in publications
     </h1>
 
     <div class="hero__text">
