updated mobile sub nav

--- a/app/styles/sidebar.scss
+++ b/app/styles/sidebar.scss
@@ -1,15 +1,33 @@
 .sidebar {
-  padding: 0 0;
+  position: sticky;
+  top: 0;
   list-style: none;
   line-height: 37px;
-  margin-bottom: 50px;
+  margin: 0 -25px 50px;
+  padding: 0 25px;
+  background-color: white;
+  display: flex;
+  justify-content: space-between;
+
+  li {
+    display: inline;
+
+    &:first-child {
+      padding-left: 0;
+    }
+  }
 
   @include desktop() {
-    position: sticky;
-    height: 0;
     top: 25px;
-    width: 200px;
+    height: 0;
+    width: 150px;
     margin: 25px 0 0 -180px;
+    display: block;
+    padding: 0;
+
+    li {
+      display: block;
+    }
   }
 
   a {
