--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,4 +1,4 @@
-<div class="hero-wrapper">
+<div class="hero-wrapper hero-wrapper--index">
   <div class="hero">
     <h1 class="hero__title">
       A practical guide to user-friendly data in publications
