--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -13,6 +13,7 @@
     <div class="hero__link">
       <a href="#catalog" {{link-inline}}>
         Explore the guide
+        <Icons::ChevronDown />
       </a>
     </div>
   </div>
