--- a/app/styles/section.scss
+++ b/app/styles/section.scss
@@ -69,6 +69,8 @@
         polyline {
           fill: none;
           stroke: $black;
+          stroke-linecap: round;
+          stroke-linejoin: round;
         }
       }
     }
