--- a/app/templates/components/catalog.hbs
+++ b/app/templates/components/catalog.hbs
@@ -57,7 +57,7 @@
             </h4>
 
             <div class="section__group__text">
-              {{recommendation.why}}
+              {{{nl2br recommendation.why}}}
             </div>
 
             {{#if recommendation.how}}
@@ -66,7 +66,7 @@
               </h4>
 
               <div class="section__group__text">
-                {{recommendation.how}}
+                {{{nl2br recommendation.how}}}
               </div>
             {{/if}}
 
