--- a/app/templates/components/catalog.hbs
+++ b/app/templates/components/catalog.hbs
@@ -85,7 +85,7 @@
               </h4>
 
               {{#each recommendation.resources as |resource|}}
-                <div class="section__group__text section__group__text--spaced">
+                <div class="section__group__text">
                   <a href={{resource.link}} rel="noopener noreferrer">
                     <strong>{{resource.title}}</strong>
                     <Icons::External />
@@ -100,7 +100,7 @@
               </h4>
 
               {{#each recommendation.contacts as |contact|}}
-                <div class="section__group__text section__group__text--spaced">
+                <div class="section__group__text">
                   <a href={{contact.link}} rel="noopener noreferrer">
                     <strong>{{contact.title}}</strong>
                     <Icons::External />
