--- a/app/styles/section.scss
+++ b/app/styles/section.scss
@@ -11,11 +11,12 @@
     margin-top: 0;
     font-size: 30px;
     font-weight: normal;
-    line-height: 40px;
+    line-height: 38px;
     color: $black;
 
     img {
-      margin-right: 10px;
+      height: 50px;
+      margin-right: 15px;
     }
   }
 
@@ -121,7 +122,7 @@
     }
 
     &__gallery {
-      background-color: $other-grey;
+      background-color: #eef2f9;
       margin: 20px -20px 0;
       padding: 20px;
       font-size: 18px;
