--- a/app/templates/components/catalog.hbs
+++ b/app/templates/components/catalog.hbs
@@ -86,7 +86,7 @@
 
               {{#each recommendation.resources as |resource|}}
                 <div class="section__group__text">
-                  <a href={{resource.link}} rel="noopener noreferrer">
+                  <a href={{resource.link}} target="_blank" rel="noopener noreferrer">
                     <strong>{{resource.title}}</strong>
                     <Icons::External />
                   </a>
@@ -101,7 +101,7 @@
 
               {{#each recommendation.contacts as |contact|}}
                 <div class="section__group__text">
-                  <a href={{contact.link}} rel="noopener noreferrer">
+                  <a href={{contact.link}} target="_blank" rel="noopener noreferrer">
                     <strong>{{contact.title}}</strong>
                     <Icons::External />
                   </a>
@@ -116,7 +116,7 @@
 
               {{#each recommendation.examples as |example|}}
                 <div class="section__group__text section__group__text--spaced">
-                  <a href={{example.link}} rel="noopener noreferrer">
+                  <a href={{example.link}} target="_blank" rel="noopener noreferrer">
                     <strong>{{example.title}}</strong>
                     <Icons::External />
                   </a>
