--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,6 +1,6 @@
 <div class="hero-wrapper">
   <div class="hero">
-    <h1 class="hero__title">
+    <h1 class="hero__title hero__title--black">
       About the «Data in Publications» Guide
     </h1>
 
