--- a/app/styles/sidebar.scss
+++ b/app/styles/sidebar.scss
@@ -2,15 +2,17 @@
   position: sticky;
   top: 0;
   list-style: none;
-  line-height: 37px;
+  line-height: 32px;
   margin: 0 -25px 50px;
-  padding: 0 25px;
+  padding: 5px 25px;
   background-color: white;
-  display: flex;
+  display: block;
   justify-content: space-between;
 
   li {
     display: inline;
+    margin-right: 15px;
+    white-space: nowrap;
 
     &:first-child {
       padding-left: 0;
@@ -24,6 +26,7 @@
     margin: 25px 0 0 -180px;
     display: block;
     padding: 0;
+    line-height: 37px;
 
     li {
       display: block;
