--- a/app/styles/section.scss
+++ b/app/styles/section.scss
@@ -135,7 +135,7 @@
     }
 
     &__gallery {
-      background-color: #eef2f9;
+      background-color: #f3f5fa;
       margin: 20px -20px;
       padding: 20px;
       font-size: 18px;
