--- a/app/styles/about.scss
+++ b/app/styles/about.scss
@@ -33,7 +33,11 @@
       line-height: 27px;
 
       a {
-        color: $op-blue;
+        color: $blue;
+
+        &:hover {
+          color: $blue-hover;
+        }
       }
     }
   }
