--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -19,13 +19,9 @@
 
 $background: #f0f4fb;
 $op-blue: #003399;
-$blue: #062fc5;
-$dark-blue: #00326c;
-$grey: #404040;
-$dark-grey: #757575;
-$other-grey: #e3e3e3;
-$shade: #f9f9f9;
-$light-grey: #c2c2c2;
+$blue: #3366cc;
+$blue-hover: #1454b7;
+$grey: #697188;
 $black: #1a1a1a;
 
 @mixin desktop() {
