--- a/app/styles/hero.scss
+++ b/app/styles/hero.scss
@@ -27,7 +27,7 @@
     line-height: 75px;
 
     &--black {
-      color: black;
+      color: $black;
       font-size: 48px;
       line-height: 60px;
       font-weight: normal;
@@ -49,7 +49,7 @@
 
   &__link {
     margin-top: 35px;
-    color: $dark-grey;
+    color: $grey;
     font-size: 18px;
 
     svg {
@@ -58,7 +58,7 @@
 
       polyline {
         fill: none;
-        stroke: $dark-grey;
+        stroke: $grey;
         stroke-linecap: round;
         stroke-linejoin: round;
       }
